# ChangeLog for app-emacs/nxml-gentoo-schemas
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/nxml-gentoo-schemas/ChangeLog,v 1.6 2007/11/23 15:49:10 ulm Exp $

*nxml-gentoo-schemas-20071122-r1 (23 Nov 2007)

  23 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
  files/81nxml-gentoo-schemas-gentoo.el,
  -nxml-gentoo-schemas-20071122.ebuild,
  +nxml-gentoo-schemas-20071122-r1.ebuild:
  Install files in etc directory, following nxml-mode. Inherit elisp.eclass
  and remove now redundant pkg_postinst and pkg_postrm functions.

*nxml-gentoo-schemas-20071122 (22 Nov 2007)

  22 Nov 2007; Diego Pettenò <flameeyes@gentoo.org> -files/book.rnc,
  -files/gleps.rnc, -files/glsa.rnc, -files/guide.rnc, -files/metadata.rnc,
  -files/metadoc.rnc, -files/project.rnc, -files/schemas.xml,
  -files/staffing-needs.rnc, -files/userinfo.rnc,
  -nxml-gentoo-schemas-20070710.ebuild,
  -nxml-gentoo-schemas-20071121.ebuild,
  +nxml-gentoo-schemas-20071122.ebuild:
  Version bump and remove old versions, included files in $FILESDIR.

*nxml-gentoo-schemas-20071121 (21 Nov 2007)

  21 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
  +nxml-gentoo-schemas-20071121.ebuild:
  Update nxml-gentoo-schemas for the metadata.dtd changes. This time the
  schemas are in a tarball.

  14 Aug 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  nxml-gentoo-schemas-20070710.ebuild:
  Keyword ~ppc.

  28 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  nxml-gentoo-schemas-20070710.ebuild:
  Add ~amd64 and ~x86-fbsd keywords.

*nxml-gentoo-schemas-20070710 (25 Jul 2007)

  25 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/81nxml-gentoo-schemas-gentoo.el, +files/book.rnc, +files/gleps.rnc,
  +files/glsa.rnc, +files/guide.rnc, +files/metadata.rnc,
  +files/metadoc.rnc, +files/project.rnc, +files/schemas.xml,
  +files/staffing-needs.rnc, +files/userinfo.rnc, +metadata.xml,
  +nxml-gentoo-schemas-20070710.ebuild: