@@ -1,19 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX 81nxml-gentoo-schemas-gentoo.el 278 RMD160 864dbb23f1a93941ca7665c70b4850e18ce518e5 SHA1 ee0b15af0efb8dd10c3b772c6a066b0f0c0200a3 SHA256 04286d7f9ed59e21dca8c212384b1552278f8b39e52f29fa0b6843af44803ef6
-MD5 6780b996d0fa7bd97cdc1b5653dd8933 files/81nxml-gentoo-schemas-gentoo.el 278
-RMD160 864dbb23f1a93941ca7665c70b4850e18ce518e5 files/81nxml-gentoo-schemas-gentoo.el 278
-SHA256 04286d7f9ed59e21dca8c212384b1552278f8b39e52f29fa0b6843af44803ef6 files/81nxml-gentoo-schemas-gentoo.el 278
+AUX 60nxml-gentoo-schemas-gentoo.el 278 RMD160 864dbb23f1a93941ca7665c70b4850e18ce518e5 SHA1 ee0b15af0efb8dd10c3b772c6a066b0f0c0200a3 SHA256 04286d7f9ed59e21dca8c212384b1552278f8b39e52f29fa0b6843af44803ef6
+MD5 6780b996d0fa7bd97cdc1b5653dd8933 files/60nxml-gentoo-schemas-gentoo.el 278
+RMD160 864dbb23f1a93941ca7665c70b4850e18ce518e5 files/60nxml-gentoo-schemas-gentoo.el 278
+SHA256 04286d7f9ed59e21dca8c212384b1552278f8b39e52f29fa0b6843af44803ef6 files/60nxml-gentoo-schemas-gentoo.el 278
 DIST nxml-gentoo-schemas-20071122.tar.bz2 9618 RMD160 500d2bbbbdf214446371342d1e1fc959e2a0297e SHA1 501feebcef384cacacc1530294042449fd7438c1 SHA256 7ece2d275b1b4c54e5b57e1aac99df819a1b778c389087cd6af4de892756aad2
-EBUILD nxml-gentoo-schemas-20071122-r1.ebuild 740 RMD160 88a65b82e67639a7a8e7f469de1a9e5ed89c85e6 SHA1 df42de770b2e256629d11662a9ce6825818aaf9e SHA256 75d8595793064992d7d69627a9737e379e544b0036f3ef01fea7144d413d41b8
-MD5 79cdc0f5148abd1a80a769e998ae9bc3 nxml-gentoo-schemas-20071122-r1.ebuild 740
-RMD160 88a65b82e67639a7a8e7f469de1a9e5ed89c85e6 nxml-gentoo-schemas-20071122-r1.ebuild 740
-SHA256 75d8595793064992d7d69627a9737e379e544b0036f3ef01fea7144d413d41b8 nxml-gentoo-schemas-20071122-r1.ebuild 740
-MISC ChangeLog 2051 RMD160 8160fc043d5d3fc0efb3fd96ba0519f9ef5d8c3e SHA1 3b10e33560803d570bf79aad15a04ef192c62f41 SHA256 4f1afd759a49955955c8b5d8eb15a1402ac8dd232b3d07af32540b721c07939c
-MD5 3a395f01f88955db6e76bf958fc6b1cf ChangeLog 2051
-RMD160 8160fc043d5d3fc0efb3fd96ba0519f9ef5d8c3e ChangeLog 2051
-SHA256 4f1afd759a49955955c8b5d8eb15a1402ac8dd232b3d07af32540b721c07939c ChangeLog 2051
+EBUILD nxml-gentoo-schemas-20071122-r1.ebuild 754 RMD160 be1d347316e2d2916097c094dcfe93ba1fa414e2 SHA1 10eade2385c4d244f8564dc156bd1ffcf691df34 SHA256 1f3d75ca3025841f246bb1253785dc5eb61b7c414dfbbcdb54b62d3dcaebca6c
+MD5 0a4cfdbf1a84eff41240348c4ae23443 nxml-gentoo-schemas-20071122-r1.ebuild 754
+RMD160 be1d347316e2d2916097c094dcfe93ba1fa414e2 nxml-gentoo-schemas-20071122-r1.ebuild 754
+SHA256 1f3d75ca3025841f246bb1253785dc5eb61b7c414dfbbcdb54b62d3dcaebca6c nxml-gentoo-schemas-20071122-r1.ebuild 754
+MISC ChangeLog 2094 RMD160 d16f3043f6d2e7d1572320548813689a470d5665 SHA1 964d60ba5d42ab4df3877b307ac828a69d9aa2a9 SHA256 f41ac36766553802b1284d513771a6b914544ccd703aea2b73a2905687594453
+MD5 13394473bfff517b483f249872ba6579 ChangeLog 2094
+RMD160 d16f3043f6d2e7d1572320548813689a470d5665 ChangeLog 2094
+SHA256 f41ac36766553802b1284d513771a6b914544ccd703aea2b73a2905687594453 ChangeLog 2094
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -24,7 +24,7 @@ SHA256 d65055a7fa984f217810cd9cd782d8a94bb959e2ed7ac15a666af879a42297dd files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFHRvaNOeoy/oIi7uwRAhppAJ0Y1HDmId0WRqRnVDDSkIPX1UArHACdEBXe
-vfgxuQodvzgfP8Ndye278dE=
-=rmr8
+iD8DBQFHRw7SOeoy/oIi7uwRAsFDAJ4q+jj2mb1O5C6YjBGGj6OJeEY+ogCfUSru
+aRkTgVfGfF49r9TlSWmxo9k=
+=GbRv
 -----END PGP SIGNATURE-----
