@@ -1,11 +1,12 @@
 # ChangeLog for app-emacs/nxml-gentoo-schemas
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/nxml-gentoo-schemas/ChangeLog,v 1.6 2007/11/23 15:49:10 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/nxml-gentoo-schemas/ChangeLog,v 1.7 2007/11/23 17:32:39 ulm Exp $
 
 *nxml-gentoo-schemas-20071122-r1 (23 Nov 2007)
 
   23 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
-  files/81nxml-gentoo-schemas-gentoo.el,
+  +files/60nxml-gentoo-schemas-gentoo.el,
+  -files/81nxml-gentoo-schemas-gentoo.el,
   -nxml-gentoo-schemas-20071122.ebuild,
   +nxml-gentoo-schemas-20071122-r1.ebuild:
   Install files in etc directory, following nxml-mode. Inherit elisp.eclass
